k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ostad-ingress
  namespace: farhansabbir
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ostad-ui-service
            port:
              number: 80
  - host: api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ostad-server-service
            port:
              number: 5050
